--- a/sass/copy.scss
+++ b/sass/copy.scss
@@ -82,6 +82,7 @@ pre {
 }
 
 ul ul, ol ol, ul ol, ol ul, ul li, ol li {
+	font-weight: 300;
 	margin-left: -6px;
 }
 
@@ -94,5 +95,6 @@ dt {
 }
 
 dd {
+	font-weight: 300;
 	margin-left: 0px;
 }
