--- a/sass/forms.scss
+++ b/sass/forms.scss
@@ -18,12 +18,14 @@ label {
 .form-input {
 	background-color: #ffffff;
 	border-color: $light-gray;
+	border-radius: 5px;
 	border-style: solid;
 	border-width: 1px;
 	display: block;
 	font-size: 13px;
+	font-weight: 300;
 	height: 32px;
-	padding: 2px 6px;
+	padding: 3px 6px;
 	width: 100%;
 
 	&[disabled] {
@@ -55,6 +57,23 @@ label {
 		&:focus {
 			box-shadow: 0px 0px 5px 0px lighten($error-color, 20%);
 		}
+	}
+
+	//Vendor prefixes for styling placeholder text
+	&::-webkit-input-placeholder {
+	   color: $med-gray;
+	}
+
+	&:-moz-placeholder { /* Firefox 18- */
+	   color: $med-gray;  
+	}
+
+	&::-moz-placeholder {  /* Firefox 19+ */
+	   color: $med-gray;  
+	}
+
+	&:-ms-input-placeholder {  
+	   color: $med-gray;  
 	}
 }
 
