Updated utility classes, docs, some components
Updated utility classes with text alignment and centering, as well as
opt ins for rounded/non rounded corners.  Updated docs to reflect
changes

--- a/sass/buttons.scss
+++ b/sass/buttons.scss
@@ -1,8 +1,9 @@
 //Button styles
 
 .btn { 
-	border-width: 1px;
+	border-radius: 5px;
 	border-style: solid;
+	border-width: 1px;
 	color: rgb(0, 158, 219);
 	cursor: pointer;
 	display: inline-block;
