Fixes Checkbox/Radio styles and adds styles for textareas

--- a/sass/forms.scss
+++ b/sass/forms.scss
@@ -9,6 +9,7 @@ label {
 	font-weight: 400;
 	margin-bottom: 5px;
 	max-width: 100%;
+	padding-left: 10px;
 }
 
 .form-row {
@@ -77,6 +78,15 @@ label {
 	}
 }
 
+textarea.form-input {
+	height: auto;
+}
+
+input[type="checkbox"],
+input[type="radio"] {
+	margin-left: -18px;
+}
+
 .checkbox label, .radio label {
 	font-weight: 400;
-}
+}	
