--- a/sass/forms.scss
+++ b/sass/forms.scss
@@ -14,6 +14,13 @@ label {
 
 .form-row {
 	margin-bottom: 15px;
+
+	&.required label::after {
+	  color: #d00;
+	  content: "*";
+	  margin-left: 8px;
+	  top: 7px;
+	}
 }
 
 .form-input {
