--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -18,6 +18,7 @@ $error-color: rgb(255, 82, 84);
 
 //Other colors
 $form-focus-color: rgb(68, 199, 244);
+$link-color: rgb(92, 172, 196);
 $highlight-color: rgb(255, 255, 153);
 
 // Font Sizes
