Removed 'Lato' font from core CSS
Fonts are up to the user for now.

--- a/sass/base.scss
+++ b/sass/base.scss
@@ -9,6 +9,6 @@ html {
 }
 
 body {
-	font-family: 'Lato', 'Helvetica', sans-serif;
+	font-family: 'Helvetica', sans-serif;
 	font-size: $base-font-size;
 }
